plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.treasurehunter'
version = '0.0.1'
description = 'Treasure Hunter'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    //spring
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    //JWT
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.7'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.7'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.7'
    //OAuth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    //JDBC
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    //swagger-ui
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
    //redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
}

tasks.named('bootRun') {
    jvmArgs = [
            //for netty 4.1.127 with jdk25
            "--sun-misc-unsafe-memory-access=allow",
            "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
            "--add-opens", "java.base/sun.misc=ALL-UNNAMED"
    ]
}

tasks.named('test') {
	useJUnitPlatform()
}
